--- a/Ad_marketing_sponsorship/EDM/EDM.html
+++ b/Ad_marketing_sponsorship/EDM/EDM.html
@@ -54,8 +54,22 @@
 									  		</td>
 										</tr>
 										<tr>
+											<td>
+												<a href="#" style="text-align: center; margin: 0 auto; display: block;">
+													<img src="images/btn_02.png" width="100%" style="max-width: 420px; display: inline-block;" alt="立即加入廣告行銷贊助計畫" title="加入廣告行銷贊助計畫">
+												</a>
+											</td>
+										</tr>
+										<tr>
+											<td>
+												<font style="font-family: Helvetica, '微軟正黑體',arial,sans-serif; font-size: 1rem; line-height: 1.6rem; padding:15px 20px; font-weight: bold; text-align:center ;display: block; margin: 0 auto; color: #333; max-width: 550px; ">
+									  				如果你有架站困擾與線上行銷廣告需求<br>holkee行銷專業團隊在此為您服務！
+												</font>
+											</td>
+										</tr>
+										<tr>
 											<td style="text-align: center; margin: 0 auto; display: block;">
-												<img src="images/btn_01.png" width="100%" style="max-width: 350px; display: inline-block;" alt="我只有架站困擾，需要專人協助">
+												<img src="images/btn_01.png" width="100%" style="max-width: 420px; display: inline-block;" alt="我只有架站困擾，需要專人協助" title="架站困擾，需要專人協助">
 											</td>
 										</tr>
 										<tr>
@@ -67,17 +81,25 @@
 										</tr>
 										<tr>
 											<td style="padding: 5px 0;">
-												<a target="_blank" href="https://www.messenger.com/t/holkeego" style="display: block; width: 100%; text-align: center;"><img style="display: inline-block; width: 90%; max-width: 225px;" src="https://img.holkee.com/main/newsletter/20190226_holkee_001/btn_contactus__01.png" alt="Facebook Messenger"></a>
-											</td>
-										</tr>
-										<tr>
-											<td style="padding: 5px 0;">
-												<a target="_blank" href="https://line.me/R/ti/p/%40bca1493j" style="display: block; width: 100%; text-align: center;"><img style="display: inline-block; width: 90%; max-width: 225px;" src="https://img.holkee.com/main/newsletter/20190226_holkee_001/btn_contactus__02.png" alt="使用 LINE 與我們聯繫"></a>
-											</td>
-										</tr>
-										<tr>
-											<td style="padding: 5px 0;">
-												<a target="_blank" href="mailto:service@holkee.com" style="display: block; width: 100%; text-align: center;"><img style="display: inline-block; width: 90%; max-width: 225px;" src="https://img.holkee.com/main/newsletter/20190226_holkee_001/btn_contactus__03.png" alt="歡迎寫 Email 給我們"></a>
+												<table style="margin: 0 auto;">
+													<tr>
+														<td style="padding: 05px;">
+															<a target="_blank" href="https://www.messenger.com/t/holkeego" style="display: block; width: 100%; text-align: center;">
+																<img style="display: inline-block; width: 90%; max-width: 90px;" src="images/btn_contactus__01.png" alt="使用 Facebook Messenger 與我們聯繫" title="使用 Messenger 與我們聯繫">
+															</a>
+														</td>
+														<td style="padding: 05px;">
+															<a target="_blank" href="https://line.me/R/ti/p/%40bca1493j" style="display: block; width: 100%; text-align: center;">
+																<img style="display: inline-block; width: 90%; max-width: 90px;" src="images/btn_contactus__02.png" alt="使用 LINE 與我們聯繫" title="使用 LINE 與我們聯繫">
+															</a>
+														</td>
+														<td style="padding: 05px;">
+															<a target="_blank" href="mailto:service@holkee.com" style="display: block; width: 100%; text-align: center;">
+																<img style="display: inline-block; width: 90%; max-width: 90px;" src="images/btn_contactus__03.png" alt="歡迎寫 Email 給我們" title="歡迎寫 Email 給我們">
+															</a>
+														</td>
+													</tr>
+												</table>
 											</td>
 										</tr>
 										<tr>
@@ -87,20 +109,6 @@
 									  				我們會盡速回覆您，謝謝！
 												</font>
 									  		</td>
-										</tr>
-										<tr>
-											<td>
-												<a href="#" style="text-align: center; margin: 0 auto; display: block;">
-													<img src="images/btn_02.png" width="100%" style="max-width: 350px; display: inline-block;" alt="立即加入廣告行銷贊助計畫">
-												</a>
-											</td>
-										</tr>
-										<tr>
-											<td>
-												<font style="font-family: Helvetica, '微軟正黑體',arial,sans-serif; font-size: 1rem; line-height: 1.6rem; padding:15px 20px; font-weight: bold; text-align:center ;display: block; margin: 0 auto; color: #333; max-width: 550px; ">
-									  				如果你有架站困擾與線上行銷廣告需求，holkee行銷專業團隊在此為您服務！
-												</font>
-											</td>
 										</tr>
 									</table>
 								</td>
