--- a/Ad_marketing_sponsorship/index.html
+++ b/Ad_marketing_sponsorship/index.html
@@ -30,64 +30,63 @@
 	        	<h2>廣告行銷贊助計畫</h2>
 	        </div>
             <div class="question-box">
-                <h3 class="title">holkee 專屬小店服務團隊，只有我們在乎你!<br>
-                    即日起，只要參與 holkee 廣告行銷贊助計畫，即可獲得<span class="yellow">廣告贊助金</span></span></h3>
-                <p class="sub_title">（即便是小額廣告預算，我們也會雙手展開給你溫暖的擁抱）</span></p>
+                <h3 class="title">holkee 專屬小店服務團隊，只有我們在乎你！<br>
+                    每月前 100 名申請廣告行銷贊助計畫，即可獲得廣告贊助金 $500-3,000 不等<br><span class="yellow"> $ 限量領取</span></span></h3>
+                <!-- <p class="sub_title">（即便是小額廣告預算，我們也會雙手展開給你溫暖的擁抱）</span></p> -->
              </div>
              <ul class="plan clearfix">
                  <li>
-                    <h4 class="top_title h4_icon_01">holkee 小資廣告方案 - $6,000</h4>
+                    <!-- <p class="label"><span>廣告贊助金 $500</span></p> -->
+                    <h4 class="top_title h4_icon_01">holkee 小資廣告方案 - $6,000<br><span>廣告贊助金 $500</span></h4>
                     <div class="plan_info">
-                        <p class="hightlight">每日預算 $100，連續 60 天 Google 廣告曝光</p>
-                        <p class="hightlight">Google關鍵字廣告每日上線 - 品牌關鍵字組：5 組</p>
-                        <p class="ex"><span class="red">成效預估: 觸及 360,000 名潛力客戶</span><br>
-                        每月前 100 名申請者，holkee 廣告贊助金 $500 <span class="yellow">限量領取</span></p>
-                        <h5>holkee 團隊免費贊助服務  </h5>
+                        <p class="hightlight">每日預算$100，60日廣告曝光</p>
+                        <p class="hightlight">Google關鍵字廣告-品牌相關字5組</p>
+                        <p class="ex"><span class="red">成效預估：觸及360,000名潛力客戶</span></p>
+                        <h5>holkee 團隊免費贊助服務</h5>
                         <ul class="nb">
-                            <li><p>專人協助，快速解決架站困擾</p></li>
-                            <li><p>專業廣告文案編輯</p></li>
+                            <li><p>專人協助解決架站困擾</p></li>
+                            <li><p>廣告文案編輯</p></li>
                         </ul>
                     </div>
                  </li>
                  <li>
-                    <h4 class="top_title h4_icon_02">holkee 精英廣告方案 - $18,000</h4>
+                    <h4 class="top_title h4_icon_02">holkee 精英廣告方案 - $18,000<br><span>廣告贊助金 $1,500</span></h4>
                     <div class="plan_info">
-                        <p class="hightlight">每日預算 $300，連續 60 天 Google 廣告曝光</p>
-                        <p class="hightlight">Google關鍵字廣告每日上線 - 品牌關鍵字 + 產品字組：5~30 組</p>
-                        <p class="hightlight">啟動Google人工智慧產品字自動搜尋曝光</p>
-                        <p class="ex"><span class="red">成效預估: 觸及 1,000,000 名潛力客戶</span><br>
-                        每月前 100 名申請者，holkee 廣告贊助金 $1,500 <span class="yellow">限量領取</span></p>
-                        <h5>holkee 團隊免費贊助服務  </h5>
+                        <p class="hightlight">每日預算$300，60日廣告曝光</p>
+                        <p class="hightlight">Google關鍵字廣告-品牌/產品相關字5-30組</p>
+                        <p class="hightlight">Google人工智慧關鍵字自動搜尋曝光</p>
+                        <p class="ex"><span class="red">成效預估：觸及1,000,000名潛力客戶</span></p>
+                        <h5>holkee 團隊免費贊助服務</h5>
                         <ul class="nb">
-                            <li><p>專人協助，快速解決架站困擾</p></li>
-                            <li><p>專業廣告文案編輯</p></li>
-                            <li><p>客製化廣告字組建議書</p></li>
-                            <li><p>隨時掌握成效，即時自動化雲端廣告報表</p></li>
+                            <li><p>專人協助解決架站困擾</p></li>
+                            <li><p>廣告文案編輯</p></li>
+                            <li><p>客製化關鍵字組建議</p></li>
+                            <li><p>即時自動化雲端成效報表</p></li>
                         </ul>
                     </div>
                  </li>
                  <li>
-                    <h4 class="top_title h4_icon_03">holkee VIP 廣告方案 - $48,000</h4>
+                    <h4 class="top_title h4_icon_03">holkee VIP 廣告方案 - $48,000<br><span>廣告贊助金 $3,000</span></h4>
                     <div class="plan_info">
-                        <p class="hightlight">每日預算 $800，連續 60 天廣告曝光</p>
-                        <p class="hightlight">Google關鍵字廣告每日上線 - 關鍵字組不限</p>
-                        <p class="hightlight">啟動Google人工智慧產品字自動搜尋曝光</p>
-                        <p class="hightlight">Google圖像型人工智慧廣告</p>
-                        <p class="hightlight">網站串接Google系統，自動廣告曝光</p>
-                        <p class="ex"><span class="red">預估觸及 2,000,000 名潛力客戶</span><br>
-                        每月前 100 名申請者，holkee 廣告贊助金 $3,000 <span class="yellow">限量領取</span></p>
-                        <h5>holkee 團隊免費贊助服務  </h5>
+                        <p class="hightlight">每日預算$800，60日廣告曝光</p>
+                        <p class="hightlight">Google關鍵字廣告-字組無上限</p>
+                        <p class="hightlight">Google人工智慧關鍵字自動搜尋曝光</p>
+                        <p class="hightlight">Google圖像人工智慧廣告</p>
+                        <p class="hightlight">網站串接Google智慧廣告系統</p>
+                        <p class="ex"><span class="red">成效預估：觸及2,000,000潛力客戶</span></p>
+                        <h5>holkee 團隊免費贊助服務</h5>
                         <ul class="nb">
-                            <li><p>專人協助，快速解決架站困擾</p></li>
-                            <li><p>專人協助，解決綠界科技金物流串接及測試確認上線</p></li>
-                            <li><p>極速品牌官網專人協助建置，提供優質消費者體驗</p></li>
-                            <li><p>品牌官網開放自訂網域功能及移除頁末 holkee 商標</p></li>
-                            <li><p>專業廣告文案編輯建議</p></li>
-                            <li><p>客製化廣告字組建議書</p></li>
-                            <li><p>數位操作顧問廣告優化建議</p></li>
-                            <li><p>隨時掌握成效，即時自動化雲端廣告報表</p></li>
-                            <li><p>消費者進站資料輪廓分析</p></li>
-                            <li><p>專業美編支援圖片廣告素材1款2式</p>
+                            <li><p>專人協助解決架站困擾</p></li>
+                            <li><p>專人協助解決/測試金物流串接問題</p></li>
+                            <li><p>極速品牌官網協助建置上線</p></li>
+                            <li><p>品牌官網自訂網域名稱</p></li>
+                            <li><p>品牌官網移除頁末holkee商標</p></li>
+                            <li><p>廣告文案編輯</p></li>
+                            <li><p>客製化關鍵字組建議</p></li>
+                            <li><p>即時自動化雲端成效報表</p></li>
+                            <li><p>專業數位廣告顧問支援</p></li>
+                            <li><p>消費者進站資料分析</p></li>
+                            <li><p>美編廣告素材設計1款2式</p></li>
                         </ul>
                     </div>
                  </li>
@@ -103,14 +102,22 @@
                         <li class="pos icon_02">
                             <input type="text" class="tbox" value="" size="" placeholder="您的稱呼">
                         </li>
-                        <li class="pos icon_06">
-                            <input type="text" class="tbox" value="" size="" placeholder="holkee 會員帳號">
-                        </li>
                         <li class="pos icon_01">
                             <input type="text" class="tbox" value="" size="" placeholder="聯絡電話">
                         </li>
-                        <li class="pos icon_07">
+                        <li class="pos icon_07 w100">
                             <input type="text" class="tbox" value="" size="" placeholder="聯絡E-mail">
+                        </li>
+                        <li class="pos icon_06">
+                            <input type="text" class="tbox" value="" size="" placeholder="holkee 會員帳號">
+                        </li>
+                        <li class="pos icon_04">
+                            <select class="md-input" name="" required="" data-parsley-min="1" data-parsley-min-message="請選擇廣告方案">
+                                <option value="0" selected="selected" class="gray" style="color: #888;">請選擇廣告方案</option>
+                                <option value="1">holkee 小資廣告方案 - $6,000</option>
+                                <option value="2">holkee 精英廣告方案 - $18,000</option>
+                                <option value="3">holkee VIP 廣告方案 - $48,000</option>
+                                </select>
                         </li>
                     </ul>
                     <div class="btn"><button>確認送出</button></div>
