--- a/Ad_marketing_sponsorship/index.html
+++ b/Ad_marketing_sponsorship/index.html
@@ -40,7 +40,7 @@
                     <h4 class="top_title h4_icon_01">holkee 小資廣告方案 - $6,000<br><span>廣告贊助金 $500</span></h4>
                     <div class="plan_info">
                         <p class="hightlight">每日預算$100，60日廣告曝光</p>
-                        <p class="hightlight">Google關鍵字廣告-品牌相關字5組</p>
+                        <p class="hightlight">Google關鍵字廣告-品牌字5組</p>
                         <p class="ex"><span class="red">成效預估：觸及360,000名潛力客戶</span></p>
                         <h5>holkee 團隊免費贊助服務</h5>
                         <ul class="nb">
@@ -53,7 +53,7 @@
                     <h4 class="top_title h4_icon_02">holkee 精英廣告方案 - $18,000<br><span>廣告贊助金 $1,500</span></h4>
                     <div class="plan_info">
                         <p class="hightlight">每日預算$300，60日廣告曝光</p>
-                        <p class="hightlight">Google關鍵字廣告-品牌/產品相關字5-30組</p>
+                        <p class="hightlight">Google關鍵字廣告-品牌/產品字5-30組</p>
                         <p class="hightlight">Google人工智慧關鍵字自動搜尋曝光</p>
                         <p class="ex"><span class="red">成效預估：觸及1,000,000名潛力客戶</span></p>
                         <h5>holkee 團隊免費贊助服務</h5>
