--- a/JH/about.html
+++ b/JH/about.html
@@ -26,8 +26,8 @@
         </ul>
         <ul class="Oneself">
             <li><h3><a href="about.html">關於我們  ｜  ABOUT US</a></h3>
-                <div class="submenu">
-                <!--     <p><a href="about.html#go01">公司簡介</a></p>
+                <!-- <div class="submenu">
+                    <p><a href="about.html#go01">公司簡介</a></p>
                     <p><a href="about.html#go02">核心能力</a></p>
                     <p><a href="about.html#go03">選材來源</a></p>
                     <p><a href="about.html#go04">原料把關</a></p>
@@ -87,6 +87,10 @@
             <div class="searchBox clearfix">
                 <input type="" name="" placeholder="關鍵字">
             </div>
+        </div>
+        <a class="icon_magnifier"></a>
+        <div class="mob_searchBox">
+            <input type="" name="" placeholder="請輸入關鍵字">
         </div>
     </nav>
 </header>
@@ -284,7 +288,7 @@
     <section class="ContentsBox">
         <ul class="info clearfix">
             <li class="icon_01">
-                <p>_連絡電話_<br><span>(03)9906828</span></p>
+                <a href="tel:+886-3-9906828"><p>_連絡電話_<br><span>(03)9906828</span></p></a>
             </li>
             <li class="icon_02">
                 <a href="https://www.facebook.com/pages/category/Community/%E6%AD%A3%E8%B1%AA%E6%9C%A8%E6%A5%AD%E8%82%A1%E4%BB%BD%E6%9C%89%E9%99%90%E5%85%AC%E5%8F%B8-209694019094602/" target="_blank"><p>_臉書專頁_<br><span>JENG HAUR</span>正豪木業</p></a>
