--- a/JH/index.html
+++ b/JH/index.html
@@ -10,9 +10,9 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="css/style.css">
 <link rel="stylesheet" type="text/css" href="jvmobilemenu/jv-jquery-mobile-menu.css">
+
 <script type="text/javascript" src="js/jquery-1.11.1.min.js"></script>
 <script type="text/javascript" src="js/goto.js"></script>
-
 <link rel="stylesheet" href="css/flexslider.css" type="text/css" media="screen" />
 
 <!-- jQuery -->
@@ -70,8 +70,8 @@
         </ul>
         <ul class="Oneself">
             <li><h3><a href="about.html">關於我們  ｜  ABOUT US</a></h3>
-                <div class="submenu">
-                <!--     <p><a href="about.html#go01">公司簡介</a></p>
+                <!-- <div class="submenu">
+                    <p><a href="about.html#go01">公司簡介</a></p>
                     <p><a href="about.html#go02">核心能力</a></p>
                     <p><a href="about.html#go03">選材來源</a></p>
                     <p><a href="about.html#go04">原料把關</a></p>
@@ -136,6 +136,10 @@
                 <input type="" name="" placeholder="關鍵字">
             </div>
         </div>
+        <a class="icon_magnifier"></a>
+        <div class="mob_searchBox">
+            <input type="" name="" placeholder="請輸入關鍵字">
+        </div>
     </nav>
 </header>
 
@@ -161,7 +165,43 @@
             </ul>
         </div>
     </section>
-    <section class="hotBox" id="goThe01">
+    <section class="serviceBox" id="goThe01">
+        <div class="top_title">
+            <h3>正豪嚴選 / <span>THE CAREFULLY SELECTED</span></h3>
+        </div>
+        <div class="ContentsBox world_map">
+            <ul class="service_list clearfix">
+                <li>
+                    <a href="about.html#goabout_04">
+                        <img src="images/service_list_img_01.png">
+                        <h4>選材來源</h4>
+                    </a>
+                </li>
+                <li>
+                    <a href="about.html#goabout_02">
+                        <img src="images/service_list_img_02.png">
+                        <h4>原料把關</h4>
+                    </a>
+                </li>
+                <li>
+                    <a href="about.html#goabout_03">
+                        <img src="images/service_list_img_03.png">
+                        <h4>特色漆面</h4>
+                    </a>
+                </li>
+                <li>
+                    <a href="about.html#goabout_01">
+                        <img src="images/service_list_img_04.png">
+                        <h4>獨門工法</h4>
+                    </a>
+                </li>
+            </ul>
+            <h4>以嚴謹的品質控管與專業技術構築您的居家「好門」</h4>
+            <p class="year">正豪木業自1993年成立迄今，以品質、創新、客戶為先的經營信念，努力耕耘實木門領域，擁有超過40年經歷的資深師傅做專業製造與嚴謹監督，多年來深獲國內外客戶的高度肯定。</p>
+            <p class="more"><a class="btn_font" href="about.html">更多資訊</a></p>
+        </div>
+    </section>
+    <section class="hotBox">
         <div class="top_title">
             <h3>人氣商品推薦 / <span>TOP 10</span></h3>
         </div>
@@ -198,7 +238,7 @@
                     </li>
                     <li>
                         <a href="product-06.html">
-                            <img src="images/product/p06/2-R36-01.jpg" alt="R36-01-刷紋黑色">
+                            <img src="images/product/p06/1-R37-01.jpg" alt="R36-01-刷紋白色">
                             <h4>經典黑白風</h4>
                             <p>R37-01-刷紋白色</p>
                         </a>
@@ -211,22 +251,22 @@
                         </a>
                     </li>
                     <li>
-                        <a href="product-02.html">
+                        <a href="product-03.html">
                             <img src="images/product/p02/9-R03-01.jpg" alt="R03-01-刷紋鉑灰色">
                             <h4>田園鄉村風</h4>
                             <p>R03-01-刷紋鉑灰色</p>
                         </a>
                     </li>
                     <li>
-                        <a href="product-02.html">
-                            <img src="images/product/p02/9-R03-01.jpg" alt="R03-01-刷紋鉑灰色">
+                        <a href="product-03.html">
+                            <img src="images/product/p03/5-R03-01.jpg" alt="R03-01-柚木本色">
                             <h4>雋永經典風</h4>
                             <p>R03-01-柚木本色</p>
                         </a>
                     </li>
                     <li>
-                        <a href="product-02.html">
-                            <img src="images/product/p02/9-R03-01.jpg" alt="R03-01-刷紋鉑灰色">
+                        <a href="product-07.html">
+                            <img src="images/product/p07/3-R05-01.jpg" alt="R05-01-原木色">
                             <h4>現代北歐風</h4>
                             <p>R05-01-原木色</p>
                         </a>
@@ -240,43 +280,7 @@
                     </li>
                 </ul>
             </div>
-            <p class="more"><a href="product-01.html">前往產品介紹</a></p>
-        </div>
-    </section>
-    <section class="serviceBox" id="goThe01">
-        <div class="top_title">
-            <h3>正豪嚴選 / <span>THE CAREFULLY SELECTED</span></h3>
-        </div>
-        <div class="ContentsBox world_map">
-            <ul class="service_list clearfix">
-                <li>
-                    <a href="about.html#goabout_04">
-                        <img src="images/service_list_img_01.png">
-                        <h4>選材來源</h4>
-                    </a>
-                </li>
-                <li>
-                    <a href="about.html#goabout_02">
-                        <img src="images/service_list_img_02.png">
-                        <h4>原料把關</h4>
-                    </a>
-                </li>
-                <li>
-                    <a href="about.html#goabout_03">
-                        <img src="images/service_list_img_03.png">
-                        <h4>特色漆面</h4>
-                    </a>
-                </li>
-                <li>
-                    <a href="about.html#goabout_01">
-                        <img src="images/service_list_img_04.png">
-                        <h4>獨門工法</h4>
-                    </a>
-                </li>
-            </ul>
-            <h4>以嚴謹的品質控管與專業技術構築您的居家「好門」</h4>
-            <p class="year">正豪木業自1993年成立迄今，以品質、創新、客戶為先的經營信念，努力耕耘實木門領域，擁有超過40年經歷的資深師傅做專業製造與嚴謹監督，多年來深獲國內外客戶的高度肯定。</p>
-            <p class="more"><a href="about.html">更多資訊</a></p>
+            <p class="more"><a class="btn_font" href="product-01.html">前往產品介紹</a></p>
         </div>
     </section>
     <section class="newsBox">
@@ -379,7 +383,7 @@
     <section class="ContentsBox">
         <ul class="info clearfix">
             <li class="icon_01">
-                <p>_連絡電話_<br><span>(03)9906828</span></p>
+                <a href="tel:+886-3-9906828"><p>_連絡電話_<br><span>(03)9906828</span></p></a>
             </li>
             <li class="icon_02">
                 <a href="https://www.facebook.com/pages/category/Community/%E6%AD%A3%E8%B1%AA%E6%9C%A8%E6%A5%AD%E8%82%A1%E4%BB%BD%E6%9C%89%E9%99%90%E5%85%AC%E5%8F%B8-209694019094602/" target="_blank"><p>_臉書專頁_<br><span>JENG HAUR</span>正豪木業</p></a>
