--- a/gift_buy/index.html
+++ b/gift_buy/index.html
@@ -17,8 +17,8 @@
     <meta property="og:image"         content="https://www.your-domain.com/path/image.jpg" />
 
 	<link rel="stylesheet" href="css/style.css">
+	<script type="text/javascript" src="js/jquery-1.11.1.min.js"></script>
 	<script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.js"></script>
-	<!-- <script type="text/javascript" src="js/jquery-1.11.1.min.js"></script> -->
 	<script src="js/jquery.countdown.js"></script>
 	<script type="text/javascript" src="js/goto.js"></script>
 	<script type="text/javascript">
@@ -223,15 +223,15 @@
 		</section>
 		<footer class="footer_box">
 			<ul class="link clearfix">
-				<li><a href="#"><p class="icon_01">抽獎序號/<br>中獎查詢</p></a></li>
-				<li><a href="#"><p class="icon_02">facebook<br>粉絲團</p></a></li>
+				<li><a href="search.html"><p class="icon_01">抽獎序號/<br>中獎查詢</p></a></li>
+				<li><a href="#" target="_blank"><p class="icon_02">facebook<br>粉絲團</p></a></li>
 				<li><a href="#"><p class="icon_03">隱私權條款</p></a></li>
 			</ul>
 			<p class="Copyright">本活動由xx第三方⾒證<br>
 				© 2019 Copyright      客服電話 0800-000-000
 			</p>
 			<a href="#" class="go_top"></a>
-			<div class="btn_buy"><p><a><span>我要購買499福袋</span></a></p></div>
+			<div class="btn_buy"><p><a><span class="icon_cart">我要購買499福袋</span></a></p></div>
 		</footer>
 	</main>
 </body>
