Update html + css

--- a/welovetour/index.html
+++ b/welovetour/index.html
@@ -64,12 +64,12 @@
             <li>
                 <h3 class="none_arr"><a target="_blank" href="http://www.welovetour.com.tw/about.html">關於年代</a></h3>
             </li>
-        </ul>
-        <p class="social_box">
+      </ul>
+      <p class="social_box">
             <a class="facebook" target="_blank" title="Facebook" href="https://www.facebook.com/weloveisland/"></a>
             <a class="youtube" target="_blank" title="Youtube" href="https://www.youtube.com/channel/UCblEym6jb1pGe8zTT5IzOFg"></a>
-        </p>
-        </div>
+      </p>
+      </div>
     </div>
 
 
@@ -142,10 +142,10 @@
             <a class="go_00">回最上方</a>
         </p>
     </section>
-    <script>
+    <!-- <script>
         ScrollReveal().reveal('.fixed_go_menu', { opacity: 0, origin: "right", distance: "100px",duration: 2000, mobile: true, easing: "cubic-bezier(0.6, 0.2, 0.1, 1)",})
         ScrollReveal().reveal('.punchline', { delay: 2000 });
-    </script>
+    </script> -->
     <section class="fixed_bottom_tools">
         <ul class="clearfix">
             <li><p><a class="line_icon" target="_blank" href="https://line.me/ti/p/%40hcn6976x">台北詢問</a></p></li>
@@ -217,7 +217,7 @@
                         <img src="images/img_map.png" alt="行程路線">
                     </div>
                 </div>
-                
+
                 <div class="bothbox SR-r">
                     <div class="info_box">
                         <h4 class="sub_title">行程亮點</h4>
@@ -231,7 +231,7 @@
                         <iframe src="https://www.youtube.com/embed/Bxl6NS5lH7s" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
                 </div>
-                
+
             </div>
         </section>
 
